# ClimbingTheLadder

./: Cargo.toml  README.md  build-web.sh
client/: Cargo.toml  build.rs
client/src/: client.rs  lib.rs  main.rs  settings.rs
client/src/debug/: debug.rs
client/src/display/: camera.rs  window.rs
client/src/input/: manager.rs
client/src/mods/: mod.rs  mod_loader.rs
client/src/renderer/: assets.rs  mod.rs  renderer.rs  rendering_data.rs  shaders.rs
client/src/resources/: content_pack.rs  desktop_loader.rs  loading.rs  mod.rs  web_loader.rs
client/src/ui/: constraints.rs  layout.rs  manager.rs  mod.rs  window.rs
client/src/ui/components/: component.rs
core/: Cargo.toml
core/src/: lib.rs  settings.rs
core/src/content/: mod.rs
core/src/mods/: mod.rs  mod_trait.rs  mods.rs
core/src/rendering/: mesh.rs  mod.rs  renderable.rs
core/src/resources/: resource_loader.rs
core/src/util/: types.rs
docs/: Directory.md  Json.md  Named_types.md  Setup.md  Shaders.md  Threading.md  Updates.md
game/: Cargo.toml
game/src/: lib.rs  settings.rs
game/src/language/: language.rs  mod.rs
game/src/mods/: mod.rs  mod_manager.rs  mod_trait.rs  mods.rs
game/src/register/: mod.rs  world.rs
game/src/rendering/: assets.rs  mesh.rs  mod.rs  renderable.rs  renderer.rs  texture.rs
game/src/resources/: content_pack.rs  mod.rs  resource_loader.rs  resource_manager.rs
game/src/util/: alloc_handle.rs  json_util.rs  macros.rs  mod.rs  register.rs  runtime_factory.rs  task_manager.rs  types.rs
game/src/world/: attachments.rs  channeling.rs  mod.rs  world.rs
game/src/world/blocks/: block.rs
game/src/world/cubes/: cube.rs
game/src/world/entities/: entity.rs
game/src/world/rooms/: room.rs
macros/: Cargo.toml
macros/src/: json_resource.rs  lib.rs
mod_template/: Cargo.toml  Manifest.json  README.md  build-all-platforms.sh  build.rs  build.sh
mod_template/mod/: Cargo.toml
mod_template/src/: lib.rs  main.rs
resources/shaders/: shader.wgsl
resources/shaders/load_first/: ui.wgsl
server/: Cargo.toml
server/src/: main.rs
util/interfaces/: Cargo.toml
util/interfaces/src/: lib.rs  loading.rs  saving.rs
util/macros/: Cargo.toml
util/macros/src/: json_loading.rs  json_saving.rs  lib.rs
web/: index.html
