[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more KEYS and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }

# Util
anyhow = "1.0.66"
lazy_static = "1.4.0"

# Resources
json = "0.12.4"

# Multithreading
tokio = { version = "1.24.1", features = ["rt"] }

[features]
rendered = []