[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }

# Util
anyhow = "1.0.66"
lazy_static = "1.4.0"
bytemuck = { version = "1.12", features = [ "derive" ] }

# Resources
json = "0.12.4"

# Multithreading
tokio = { version = "1.24.1", features = ["rt"] }

[features]
renderer = []